--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -55,11 +55,10 @@ jobs:
     - name: Flet Build APK
       run: |
         flet build apk hello_world_janela --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION
-        mv /home/runner/work/apk_test/apk_test/hello_world_janela/build/* ~/build/apk
     - name: Upload APK Artifact
       uses: actions/upload-artifact@v4.3.4  # https://github.com/marketplace/actions/upload-a-build-artifact
       with:
         name: apk-build-artifact  # the name of the artifact
-        path: build/apk  # location of Flet build output
+        path:  /home/runner/work/apk_test/apk_test/hello_world_janela/build/flutter/build/app/outputs/flutter-apk/*      # location of Flet build output
         if-no-files-found: error  # Fail the action with an error message if no files are found
         overwrite: false  # If true, an artifact with a matching name will be deleted before a new one is uploaded. If false, the action will fail if an artifact for the given name already exists. Does not fail if the artifact does not exist.
